# backend/src/routes/Router.ts
@@ -5,6 +5,7 @@ import supplierRouter from "./supplier.route";
 import categoryRouter from "./category.route";
 import productRouter from "./product.route";
 import orderRouter from "./order.route"
+import voucherRouter from "./voucher.router"
 
 const router = Router();
 
@@ -14,5 +15,6 @@ router.use("/supplier", supplierRouter)
 router.use("/category", categoryRouter)
 router.use("/product", productRouter)
 router.use("/order", orderRouter)
+router.use("/voucher", voucherRouter)
 
 export default router;
