# backend/swagger-output.json
@@ -23,9 +23,38 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "phone_number": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -107,7 +136,13 @@
                 "name": {
                   "example": "any"
                 },
-                "position": {
+                "email": {
+                  "example": "any"
+                },
+                "phone_number": {
+                  "example": "any"
+                },
+                "address": {
                   "example": "any"
                 }
               }
@@ -316,6 +351,9 @@
       "get": {
         "description": "",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -330,7 +368,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "supplier": {
+                "name": {
+                  "example": "any"
+                },
+                "phone_number": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "address": {
                   "example": "any"
                 }
               }
@@ -385,7 +432,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "supplier": {
+                "name": {
+                  "example": "any"
+                },
+                "phone_number": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "address": {
                   "example": "any"
                 }
               }
@@ -428,6 +484,9 @@
       "get": {
         "description": "",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -442,7 +501,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "category": {
+                "name": {
+                  "example": "any"
+                },
+                "parent_id": {
                   "example": "any"
                 }
               }
@@ -497,7 +559,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "category": {
+                "name": {
+                  "example": "any"
+                },
+                "parent_id": {
                   "example": "any"
                 }
               }
@@ -540,6 +605,9 @@
       "get": {
         "description": "",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -554,7 +622,58 @@
             "schema": {
               "type": "object",
               "properties": {
-                "product": {
+                "name": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "size": {
+                  "example": "any"
+                },
+                "sex": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "import_price": {
+                  "example": "any"
+                },
+                "sold": {
+                  "example": "any"
+                },
+                "brand": {
+                  "example": "any"
+                },
+                "supplier": {
+                  "example": "any"
+                },
+                "avata": {
+                  "example": "any"
+                },
+                "image1": {
+                  "example": "any"
+                },
+                "image2": {
+                  "example": "any"
+                },
+                "image3": {
+                  "example": "any"
+                },
+                "image4": {
+                  "example": "any"
+                },
+                "image5": {
+                  "example": "any"
+                },
+                "image6": {
                   "example": "any"
                 }
               }
@@ -609,7 +728,58 @@
             "schema": {
               "type": "object",
               "properties": {
-                "product": {
+                "name": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "size": {
+                  "example": "any"
+                },
+                "sex": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "import_price": {
+                  "example": "any"
+                },
+                "sold": {
+                  "example": "any"
+                },
+                "brand": {
+                  "example": "any"
+                },
+                "supplier": {
+                  "example": "any"
+                },
+                "avata": {
+                  "example": "any"
+                },
+                "image1": {
+                  "example": "any"
+                },
+                "image2": {
+                  "example": "any"
+                },
+                "image3": {
+                  "example": "any"
+                },
+                "image4": {
+                  "example": "any"
+                },
+                "image5": {
+                  "example": "any"
+                },
+                "image6": {
                   "example": "any"
                 }
               }
@@ -746,6 +916,139 @@
               "type": "object",
               "properties": {
                 "order": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/voucher/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "description": {
+                  "example": "any"
+                },
+                "code": {
+                  "example": "any"
+                },
+                "type_of_discount": {
+                  "example": "any"
+                },
+                "discount": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/voucher/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "description": {
+                  "example": "any"
+                },
+                "code": {
+                  "example": "any"
+                },
+                "type_of_discount": {
+                  "example": "any"
+                },
+                "discount": {
                   "example": "any"
                 }
               }
